--- a/.github/workflows/djangovuln.yml
+++ b/.github/workflows/djangovuln.yml
@@ -35,6 +35,7 @@ jobs:
         
         # Runs a single command using the runners shell
       - name: Running bandit and json outout
+        continue-on-error: true
         run: bandit -r ./ -f json -o djangovuln_results.json
         
         
