--- a/.github/workflows/djangovuln.yml
+++ b/.github/workflows/djangovuln.yml
@@ -47,6 +47,10 @@ jobs:
         with:
          name: django-output
          path: djangovuln_results.json
+         
+         # Runs a single command using the runners shell
+      - name: Secret scan truffle log
+        run: trufflehog filesystem ./
         
         
    
