--- a/.github/workflows/djangovuln.yml
+++ b/.github/workflows/djangovuln.yml
@@ -50,7 +50,7 @@ jobs:
          
          # Runs a single command using the runners shell
       - name: Secret scan truffle log
-        run: trufflehog filesystem ./
+        run: trufflehog ./
         
         
    
