--- a/.github/workflows/djangovuln.yml
+++ b/.github/workflows/djangovuln.yml
@@ -48,10 +48,13 @@ jobs:
          name: django-output
          path: djangovuln_results.json
          
-         # Runs a single command using the runners shell
-      - name: Secret scan truffle log
-        run: trufflehog ./
-        
+       
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          ref: ${{ github.head_ref }} // necessary for pull request workflow trigger
+      - name: trufflehog-actions-scan
+        uses: edplato/trufflehog-actions-scan@master 
         
    
 
