--- a/.github/workflows/djangovuln.yml
+++ b/.github/workflows/djangovuln.yml
@@ -48,13 +48,12 @@ jobs:
          name: django-output
          path: djangovuln_results.json
          
+         # Runs a single command using the runners shell
+      - name: Installing Trufflehog for secret scan
+        run:  pip install trufflehog3
+         
        
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-          ref: ${{ github.head_ref }} // necessary for pull request workflow trigger
-      - name: trufflehog-actions-scan
-        uses: edplato/trufflehog-actions-scan@master 
+    
         
    
 
